Fix profile picture source in index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <div class="profile-container">
-               <img src="profile picture.jpg" alt="Profile Picture" class="profile-picture">
+               <img src="small picture.jpg" alt="Profile Picture" class="profile-picture">
         <h1>Yusuf Khalil</h1>
         <p>Matric: U22ICE1001 | ICE DEPT. </p>
         <p>Welcome to my personal profile page. <br>  <i> Here, you can find a little bit about me.</i></p>
@@ -112,4 +112,5 @@
     </div>
 </body>
 </html>
+
 
